--- a/live_second.html
+++ b/live_second.html
@@ -144,7 +144,7 @@ var channelScheduleData={ //某频道的排期数据
 };
 
 function logInput(str){
-	//return 0;
+	return 0;
 	var s=$('testDiv').innerHTML;
 	$('testDiv').innerHTML=s+'<br/>'+str;
 }
